RESOLVED FIXED231443
[css-ui] Fix interpolation of accent-color
https://bugs.webkit.org/show_bug.cgi?id=231443
Summary [css-ui] Fix interpolation of accent-color
Aditya Keerthi
Reported 2021-10-08 11:53:43 PDT
...
Attachments
Patch (47.83 KB, patch)
2021-10-08 11:58 PDT, Aditya Keerthi
graouts: review+
Patch for landing (47.83 KB, patch)
2021-10-11 17:26 PDT, Aditya Keerthi
no flags
Aditya Keerthi
Comment 1 2021-10-08 11:54:02 PDT
Aditya Keerthi
Comment 2 2021-10-08 11:58:59 PDT
Antoine Quint
Comment 3 2021-10-11 05:46:28 PDT
Comment on attachment 440652 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=440652&action=review Very nice! Thanks for catching this and fixing it Aditya. > Source/WebCore/animation/CSSPropertyAnimation.cpp:1490 > + auto& blendingRenderStyle = context.progress < 0.5 ? from : to; If canInterpolate(from, to) is false, then progress should have already been set to either 0 or 1 in CSSPropertyAnimation::blendProperties(). I think you should ASSERT() that you're only dealing with 0 or 1 here and change this line to `auto& blendingRenderStyle = context.progress ? from : to;`.
Antoine Quint
Comment 4 2021-10-11 05:46:47 PDT
Comment on attachment 440652 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=440652&action=review Very nice! Thanks for catching this and fixing it Aditya. >> Source/WebCore/animation/CSSPropertyAnimation.cpp:1490 >> + auto& blendingRenderStyle = context.progress < 0.5 ? from : to; > > If canInterpolate(from, to) is false, then progress should have already been set to either 0 or 1 in CSSPropertyAnimation::blendProperties(). I think you should ASSERT() that you're only dealing with 0 or 1 here and change this line to `auto& blendingRenderStyle = context.progress ? from : to;`. If canInterpolate(from, to) is false, then progress should have already been set to either 0 or 1 in CSSPropertyAnimation::blendProperties(). I think you should ASSERT() that you're only dealing with 0 or 1 here and change this line to `auto& blendingRenderStyle = context.progress ? from : to;`.
Aditya Keerthi
Comment 5 2021-10-11 17:26:47 PDT
Created attachment 440865 [details] Patch for landing
Aditya Keerthi
Comment 6 2021-10-11 17:27:48 PDT
(In reply to Antoine Quint from comment #4) > Comment on attachment 440652 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=440652&action=review > > Very nice! Thanks for catching this and fixing it Aditya. Thanks for the review! > >> Source/WebCore/animation/CSSPropertyAnimation.cpp:1490 > >> + auto& blendingRenderStyle = context.progress < 0.5 ? from : to; > > > > If canInterpolate(from, to) is false, then progress should have already been set to either 0 or 1 in CSSPropertyAnimation::blendProperties(). I think you should ASSERT() that you're only dealing with 0 or 1 here and change this line to `auto& blendingRenderStyle = context.progress ? from : to;`. > > If canInterpolate(from, to) is false, then progress should have already been > set to either 0 or 1 in CSSPropertyAnimation::blendProperties(). I think you > should ASSERT() that you're only dealing with 0 or 1 here and change this > line to `auto& blendingRenderStyle = context.progress ? from : to;`. Added the assertion. I think you meant `auto& blendingRenderStyle = context.progress ? to : from;` :)
Antoine Quint
Comment 7 2021-10-12 06:16:40 PDT
(In reply to Aditya Keerthi from comment #6) > (In reply to Antoine Quint from comment #4) > > Comment on attachment 440652 [details] > > Patch > > > > View in context: > > https://bugs.webkit.org/attachment.cgi?id=440652&action=review > I think you meant `auto& blendingRenderStyle = context.progress ? to : > from;` :) Absolutely!
EWS
Comment 8 2021-10-12 06:48:28 PDT
Committed r283980 (242826@main): <https://commits.webkit.org/242826@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 440865 [details].
Note You need to log in before you can comment on or make changes to this bug.