[css-ui] Fix interpolation of accent-color https://bugs.webkit.org/show_bug.cgi?id=231443 rdar://84037162

Reviewed by Antoine Quint.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-ui/animation/accent-color-interpolation-expected.txt:

Source/WebCore:

* animation/CSSPropertyAnimation.cpp:
(WebCore::CSSPropertyAnimationWrapperMap::CSSPropertyAnimationWrapperMap):


Canonical link: https://commits.webkit.org/242826@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283980 268f45cc-cd09-0410-ab3c-d52691b4dbfc